err/django-media-utils.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_media_utils-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/media_utils'...
Listing './lib/python3.5/site-packages/media_utils/management'...
Listing './lib/python3.5/site-packages/media_utils/management/commands'...
Compiling './lib/python3.5/site-packages/media_utils/management/commands/link_media.py'...
***   File "./lib/python3.5/site-packages/media_utils/management/commands/link_media.py", line 39
    print "Creating symlinks in %s" % media_dir
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/media_utils/tests'...
Listing './lib/python3.5/site-packages/media_utils/tests/no_label_app'...
Listing './lib/python3.5/site-packages/media_utils/tests/no_label_app/media'...
Listing './lib/python3.5/site-packages/media_utils/tests/skip_app'...
Listing './lib/python3.5/site-packages/media_utils/tests/skip_app/media'...
Listing './lib/python3.5/site-packages/media_utils/tests/skip_app/media/skip_app'...
Listing './lib/python3.5/site-packages/media_utils/tests/templates'...
Listing './lib/python3.5/site-packages/media_utils/tests/test_app'...
Listing './lib/python3.5/site-packages/media_utils/tests/test_app/media'...
Listing './lib/python3.5/site-packages/media_utils/tests/test_app/media/test_app'...
Listing './lib/python3.5/site-packages/media_utils/tests/test_project'...
Listing './lib/python3.5/site-packages/media_utils/tests/test_project/media'...
Listing './lib/python3.5/site-packages/media_utils/tests/test_project/media/subdir'...
Listing './lib/python3.5/site-packages/media_utils/tests/test_project/media/test_app'...
Compiling './lib/python3.5/site-packages/media_utils/views.py'...
***   File "./lib/python3.5/site-packages/media_utils/views.py", line 48
    except Http404, err404:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
